intel/bench_214_work/extr_.FFmpeglibavfiltervf_curves.c_filter_slice_planar_with_main/log.txt
bench_214_work/extr_.FFmpeglibavfiltervf_curves.c_filter_slice_planar_with_main/extr_.FFmpeglibavfiltervf_curves.c_filter_slice_planar_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214_work/extr_.FFmpeglibavfiltervf_curves.c_filter_slice_planar_with_main/extr_.FFmpeglibavfiltervf_curves.c_filter_slice_planar_with_main.c:38:23: error: cannot initialize a variable of type 'const ThreadData *' (aka 'const TYPE_7__ *') with an lvalue of type 'void *'
    const ThreadData *td = arg;
                      ^    ~~~
2 errors generated.
HLS FPGA Parse FAILED.
